--- a/Client/app/src/Pages/Admin/components/Navbar.css
+++ b/Client/app/src/Pages/Admin/components/Navbar.css
@@ -2,3 +2,10 @@
 .customNav{
     width: 250px; min-height:100vh
 }
+
+.main-content {
+    margin-left: 300px;
+    height: 100vh;
+    overflow-y: auto;
+    padding: 1.5rem;
+}
